<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addProductActivity">

    <EditText
        android:id="@+id/updateEditTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/hint_product"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateEditTextQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_quantity"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEditTextName" />

    <Spinner
        android:id="@+id/updateSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hint_spinner"
        android:minHeight="48dp"
        android:background="@color/colorPrimaryDark"
        android:popupBackground="@color/colorPrimary"
        android:tooltipText="@string/hint_spinner"
        android:textAlignment="center"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEditTextQuantity"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/updateProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/update_product_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateSpinner"
        app:layout_constraintVertical_bias="0.866" />

    <Button
        android:id="@+id/subtractBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/subtract"
        android:contentDescription="@string/subtract"
        app:layout_constraintBottom_toBottomOf="@+id/updateEditTextQuantity"
        app:layout_constraintEnd_toStartOf="@+id/updateEditTextQuantity"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateEditTextQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/add"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/updateEditTextQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateEditTextQuantity"
        app:layout_constraintTop_toTopOf="@+id/updateEditTextQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>