<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity">

    <EditText
        android:id="@+id/editTextListName"
        android:layout_width="247dp"
        android:layout_height="83dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/hint_list"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imgSelectBtn"
        android:layout_width="120dp"
        android:layout_height="86dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_image"
        app:layout_constraintEnd_toEndOf="@+id/editTextListName"
        app:layout_constraintStart_toStartOf="@+id/editTextListName"
        app:layout_constraintTop_toBottomOf="@+id/editTextListName" />

    <Button
        android:id="@+id/saveListBtn"
        android:layout_width="158dp"
        android:layout_height="74dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/saveListBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectBtn"
         />
</androidx.constraintlayout.widget.ConstraintLayout>